--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="main">
+     <h1 class="logo">السنن الرواتب</h1>
     <div class="overlay"></div>
     <img src="images/prayer1.png" class="prayer">
         <div class="controls">
