--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="main">
-     <h1 class="logo">السنن الرواتب</h1>
+    <h1 class="logo">السنن الرواتب</h1>
     <div class="overlay"></div>
     <img src="images/prayer1.png" class="prayer">
         <div class="controls">
@@ -46,6 +46,7 @@
     </div>
     
 </div>
+<img src="images/sonan.jpg" class="sonan">
 <script>
     let circle=document.getElementById("circle");
     let upBtn=document.getElementById("upBtn");
